--- a/game.html
+++ b/game.html
@@ -19,7 +19,8 @@
 </script>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" src="game-prediction.js"></script>
+<!--<script type="text/javascript" src="game.js"></script>-->
 <script type="text/javascript" src="party1.js"></script>
 <script type="text/javascript">
     playParty(party1);
