--- a/game.html
+++ b/game.html
@@ -19,11 +19,12 @@
 </script>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="game-prediction.js"></script>
+<script type="text/javascript" src="game-smart.js"></script>
 <!--<script type="text/javascript" src="game.js"></script>-->
+<script type="text/javascript" src="party2.js"></script>
 <script type="text/javascript" src="party1.js"></script>
 <script type="text/javascript">
-    playParty(party1);
+    playParty(party2);
     var histo = [];
     var histoIdx = 0;
     $('#commandForm').submit(function () {
